--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+deepin-wallpapers-nonfree (1.4) stable; urgency=medium
+
+  * add Deepin-Technology-Brand-Logo.jpg
+
+ -- TagBuilder <lichenggang@uniontech.com>  Tue, 02 Feb 2021 14:07:38 +0800
+
 deepin-wallpapers-nonfree (1.3-1) stable; urgency=low
 
   * Autobuild Tag 1.3 
