feat: rm Deepin-Technology-Brand-Logo.jpg Transfer deepin-wallpaper
Change-Id: I5579ff4a7e04fa6a8e949f3e403665cf2bece84e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+deepin-wallpapers-nonfree (1.5) unstable; urgency=medium
+
+  * rm Deepin-Technology-Brand-Log.jpg.
+
+ -- TagBuilder <lichenggang@uniontech.com>  Wed, 10 Mar 2021 20:58:34 +0800
+
 deepin-wallpapers-nonfree (1.4) stable; urgency=medium
 
   * add Deepin-Technology-Brand-Logo.jpg
