--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+deepin-wallpapers-nonfree (1.7.9) unstable; urgency=medium
+
+  * add nonfree wallpapers.
+
+ -- LiChengGang <lichenggang@uniontech.com>  Mon, 06 Feb 2023 16:04:40 +0800
+
 deepin-wallpapers-nonfree (1.7.8) unstable; urgency=medium
 
   * rm Deepin-Technology-Brand-Log.jpg.
